<resources>
    <string name="app_name">Drain</string>
    <string name="empty"> </string>

    <!-- Login and Register Activity -->
    <string name="email_address">Email address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="register">Register</string>
    <string name="change">Change</string>
    <string name="edit">Click here to edit</string>
    <string name="dont_have_an_account">I don\'t have an account</string>
    <string name="do_have_an_account">I do have an account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="change_password">Change password</string>

    <!-- Navigation Drawer -->
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="list">List</string>
    <string name="profile">My Profile</string>

    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <!-- Header -->
    <string name="header_d">d</string>
    <string name="header_r">r</string>
    <string name="header_a">a</string>
    <string name="header_i">i</string>
    <string name="header_n">n</string>

    <!-- Main Activity -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="bottle">bottle</string>
    <string name="glass">Glass</string>
    <string name="can">Can</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="weather">Weather</string>

    <!-- Stats Activity -->
    <string name="start_value">Start</string>
    <string name="end_value">End</string>
    <string name="set_value">Set</string>

    <string name="week">Week</string>
    <string name="month">Month</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
</resources>
