<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/profile_text_bg"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textSize="18sp"
        android:textColor="@color/Blue2"
        android:textColorHint="@color/Blue2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <TextView
        android:id="@+id/profile_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/profile_text_bg"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textSize="18sp"
        android:textColor="@color/Blue2"
        android:textColorHint="@color/Blue2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@id/profile_email">
    </TextView>

    <LinearLayout
        android:id="@+id/pr_liniear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/profile_username"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/profile_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/profile_text_bg"
            android:hint="@string/weight"
            android:inputType="number"
            android:padding="16dp"
            android:textSize="18sp"
            android:textColor="@color/Blue2"
            android:textColorHint="@color/Blue2" />

        <TextView
            android:id="@+id/profile_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/profile_text_bg"
            android:hint="@string/age"
            android:inputType="number"
            android:padding="16dp"
            android:textSize="18sp"
            android:textColor="@color/Blue2"
            android:textColorHint="@color/Blue2" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_click_to_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/profile_btn_bg"
        android:padding="16dp"
        android:text="@string/edit"
        android:textAllCaps="true"
        android:textColor="@color/White"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/pr_liniear_layout">
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>