<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/main_app_bar">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="299dp"
            android:layout_height="299dp"
            android:progress="0"
            android:progressBackgroundTint="@color/Blue5"
            android:progressTint="@color/Blue2"
            android:rotation="-90"
            app:layout_constraintBottom_toBottomOf="@+id/fg_bottle"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="@+id/fg_bottle" />

        <ImageView
            android:id="@+id/fg_bottle"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="24sp"
            android:src="@drawable/fg_bottle"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/fg_bottle">

            <Button
                android:id="@+id/btn_add_bottle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:background="@drawable/profile_btn_bg"
                android:padding="16dp"
                android:text="@string/bottle"
                android:textAllCaps="true"
                android:textColor="@color/White" />

            <Button
                android:id="@+id/btn_add_glass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:background="@drawable/profile_btn_bg"
                android:padding="16dp"
                android:text="@string/glass"
                android:textAllCaps="true"
                android:textColor="@color/White" />

            <Button
                android:id="@+id/btn_add_can"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:background="@drawable/profile_btn_bg"
                android:padding="16dp"
                android:text="@string/can"
                android:textAllCaps="true"
                android:textColor="@color/White" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:text="@string/today"
            android:textAllCaps="true"
            android:textColor="@color/Blue2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <TextView
            android:id="@+id/tv_today_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 ml / 0 ml"
            android:textColor="@color/Blue2"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_today" />

        <TextView
            android:id="@+id/tv_yesterday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:text="@string/yesterday"
            android:textAllCaps="true"
            android:textColor="@color/Blue2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_today_stats" />

        <TextView
            android:id="@+id/tv_yesterday_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 ml / 0 ml"
            android:textColor="@color/Blue2"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_yesterday" />


        <TextView
            android:id="@+id/tv_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather"
            android:textAllCaps="true"
            android:textColor="@color/Blue2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline_middle"
            app:layout_constraintTop_toTopOf="@+id/tv_today" />

        <TextView
            android:id="@+id/tv_weather_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="City"
            android:textColor="@color/Blue2"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/guideline_middle"
            app:layout_constraintTop_toBottomOf="@+id/tv_weather" />

        <TextView
            android:id="@+id/tv_weather_degrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 °C"
            android:textColor="@color/Blue2"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/guideline_middle"
            app:layout_constraintTop_toBottomOf="@+id/tv_weather_city" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>